// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <MembersEnhanced /> Should render <MembersEnhanced /> with defaultProps 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des membres
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
      <div
        class="af-paging"
      >
        <div
          class="af-paging__limit"
        >
          <div
            class="af-paging__limit"
          >
            <form
              class="af-paging__form"
            >
              <div
                class="af-form__group"
              >
                <div
                  class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
                >
                  <label
                    class="af-form__group-label"
                    for="paging"
                  >
                    Afficher
                  </label>
                </div>
                <div
                  class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
                >
                  <div
                    class="af-form__select"
                  >
                    <div
                      class="af-form__select-container"
                    >
                      <select
                        class="af-form__input-select"
                        id="paging"
                      >
                        <option
                          value="5"
                        >
                          5
                        </option>
                        <option
                          value="10"
                        >
                          10
                        </option>
                        <option
                          value="25"
                        >
                          25
                        </option>
                        <option
                          value="50"
                        >
                          50
                        </option>
                        <option
                          value="100"
                        >
                          100
                        </option>
                      </select>
                      <span
                        class="glyphicon glyphicon-menu-down"
                      />
                    </div>
                    <span
                      class="af-form__input-cmplt"
                    >
                      éléments
                    </span>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="af-paging__pager"
        >
          <nav
            class="af-pager"
          >
            <ul
              class="af-pager__pagination"
            >
              <li
                class="af-pager__item af-pager__item--disabled"
              >
                <span
                  class="af-pager__item-nolink"
                >
                  « Précédent
                </span>
              </li>
              <li
                class="af-pager__item af-pager__item--active"
              >
                <a
                  class="af-pager__item-link"
                  href="#"
                >
                  <span>
                    1
                  </span>
                </a>
              </li>
              <li
                class="af-pager__item af-pager__item--disabled"
              >
                <span
                  class="af-pager__item-nolink"
                >
                  Suivant »
                </span>
              </li>
            </ul>
          </nav>
        </div>
      </div>
       
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component <MembersEnhanced /> Should render <MembersEnhanced /> with one member 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des membres
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
      <table
        class="af-table af-table--members"
      >
        <thead
          class="af-table-thead"
        >
          <tr
            class="af-table__tr"
          >
            <th
              class="af-table__th af-table__th--sortable"
              role="button"
            >
              <button
                class="af-btn af-btn--table-sorting"
                type="button"
              >
                Prénom
                <span
                  class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-sorting"
                />
              </button>
            </th>
            <th
              class="af-table__th af-table__th--sortable"
              role="button"
            >
              <button
                class="af-btn af-btn--table-sorting"
                type="button"
              >
                Nom
                <span
                  class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-sorting"
                />
              </button>
            </th>
            <th
              class="af-table__th af-table__th--sortable"
              role="button"
            >
              <button
                class="af-btn af-btn--table-sorting"
                type="button"
              >
                Date de naissance
                <span
                  class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-sorting"
                />
              </button>
            </th>
            <th
              class="af-table__th"
              role="columnheader"
            >
              Sexe
            </th>
          </tr>
        </thead>
        <tbody
          class="af-table__body"
        >
          <tr
            class="af-table__tr"
          >
            <td
              class="af-table__cell"
            >
              Samuel
            </td>
            <td
              class="af-table__cell"
            >
              Gomez
            </td>
            <td
              class="af-table__cell"
            >
              20/10/1985
            </td>
            <td
              class="af-table__cell"
            >
              M
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="af-paging"
      >
        <div
          class="af-paging__limit"
        >
          <div
            class="af-paging__limit"
          >
            <form
              class="af-paging__form"
            >
              <div
                class="af-form__group"
              >
                <div
                  class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
                >
                  <label
                    class="af-form__group-label"
                    for="paging"
                  >
                    Afficher
                  </label>
                </div>
                <div
                  class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
                >
                  <div
                    class="af-form__select"
                  >
                    <div
                      class="af-form__select-container"
                    >
                      <select
                        class="af-form__input-select"
                        id="paging"
                      >
                        <option
                          value="5"
                        >
                          5
                        </option>
                        <option
                          value="10"
                        >
                          10
                        </option>
                        <option
                          value="25"
                        >
                          25
                        </option>
                        <option
                          value="50"
                        >
                          50
                        </option>
                        <option
                          value="100"
                        >
                          100
                        </option>
                      </select>
                      <span
                        class="glyphicon glyphicon-menu-down"
                      />
                    </div>
                    <span
                      class="af-form__input-cmplt"
                    >
                      éléments
                    </span>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="af-paging__pager"
        >
          <nav
            class="af-pager"
          >
            <ul
              class="af-pager__pagination"
            >
              <li
                class="af-pager__item af-pager__item--disabled"
              >
                <span
                  class="af-pager__item-nolink"
                >
                  « Précédent
                </span>
              </li>
              <li
                class="af-pager__item af-pager__item--active"
              >
                <a
                  class="af-pager__item-link"
                  href="#"
                >
                  <span>
                    1
                  </span>
                </a>
              </li>
              <li
                class="af-pager__item af-pager__item--disabled"
              >
                <span
                  class="af-pager__item-nolink"
                >
                  Suivant »
                </span>
              </li>
            </ul>
          </nav>
        </div>
      </div>
       
    </div>
  </div>
</DocumentFragment>
`;
